switch to Vundle, add more colors and plugins and settings to vimrc

--- a/README
+++ b/README
@@ -7,8 +7,7 @@ Create symlinks:
     ln -s ~/.vim/vimrc ~/.vimrc
     ln -s ~/.vim/gvimrc ~/.gvimrc
 
-Switch to the `~/.vim` directory, and fetch submodules:
+Install the Inconsolata and Liberation Mono powerline fonts:
 
-    cd ~/.vim
-    git submodule init
-    git submodule update
+    https://github.com/Lokaltog/powerline-fonts    
+
